--- a/impl/gwsynthesis/dual_5640_syn.rpt.html
+++ b/impl/gwsynthesis/dual_5640_syn.rpt.html
@@ -55,32 +55,32 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\cmos_add.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\cmos_rpll\cmos_rpll.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ddr3_memory_interface\ddr3_memory_interface.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ddr_rpll\ddr_rpll.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\dual_ov5640_lcd.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\dvi_tx\dvi_tx.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\fifo_ping\fifo_ping.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\fifo_pong\fifo_pong.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\gowin_clkdiv\gowin_clkdiv.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\hdmi_rpll\hdmi_rpll.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\OV5640_capture_data.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\i2c_dri.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\i2c_ov5640_rgb565_cfg.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\ov5640_dri.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\picture_size.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\syn_code\syn_gen.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\testpattern.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\video_frame_buffer\video_frame_buffer.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\video_frame_buffer_32\video_frame_buffer_32.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\video_frame_buffer_dual\video_frame_buffer_dual.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\video_rpll\video_rpll.v<br>
-D:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_AO_0\gw_ao_mem_ctrl.v<br>
-D:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_AO_0\gw_ao_top.v<br>
-D:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_CON\gw_con_top.v<br>
-D:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\gw_jtag.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_top.v<br>
+<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\cmos_add.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\cmos_rpll\cmos_rpll.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\ddr3_memory_interface\ddr3_memory_interface.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\ddr_rpll\ddr_rpll.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\dual_ov5640_lcd.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\dvi_tx\dvi_tx.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\fifo_ping\fifo_ping.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\fifo_pong\fifo_pong.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\gowin_clkdiv\gowin_clkdiv.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\hdmi_rpll\hdmi_rpll.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\ov5640\OV5640_capture_data.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\ov5640\i2c_dri.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\ov5640\i2c_ov5640_rgb565_cfg.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\ov5640\ov5640_dri.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\ov5640\picture_size.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\syn_code\syn_gen.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\testpattern.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\video_frame_buffer\video_frame_buffer.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\video_frame_buffer_32\video_frame_buffer_32.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\video_frame_buffer_dual\video_frame_buffer_dual.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\video_rpll\video_rpll.v<br>
+C:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_AO_0\gw_ao_mem_ctrl.v<br>
+C:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_AO_0\gw_ao_top.v<br>
+C:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_CON\gw_con_top.v<br>
+C:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\gw_jtag.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\impl\gwsynthesis\RTL_GAO\gw_gao_top.v<br>
 </td>
 </tr>
 <tr>
@@ -101,7 +101,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Thu Oct 21 22:13:31 2021
+<td>Mon Oct 25 15:38:30 2021
 </td>
 </tr>
 <tr>
@@ -117,11 +117,11 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">Synthesis Process</td>
-<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 768.109MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.421s, Elapsed time = 0h 0m 0.413s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.359s, Elapsed time = 0h 0m 0.363s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.687s, Elapsed time = 0h 0m 0.668s, Peak memory usage = 768.109MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0.093s, Elapsed time = 0h 0m 0.094s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.008s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.04s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.011s, Peak memory usage = 768.109MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.203s, Elapsed time = 0h 0m 0.207s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.156s, Elapsed time = 0h 0m 0.154s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0.109s, Elapsed time = 0h 0m 0.107s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s, Peak memory usage = 768.109MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.25s, Elapsed time = 0h 0m 0.258s, Peak memory usage = 768.109MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.406s, Elapsed time = 0h 0m 0.418s, Peak memory usage = 768.109MB<br/></td>
+<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 1s, Elapsed time = 0h 0m 2s, Peak memory usage = 760.477MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.25s, Elapsed time = 0h 0m 0.249s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.218s, Elapsed time = 0h 0m 0.224s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.421s, Elapsed time = 0h 0m 0.407s, Peak memory usage = 760.477MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.057s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.005s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.019s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.006s, Peak memory usage = 760.477MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.125s, Elapsed time = 0h 0m 0.124s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.078s, Elapsed time = 0h 0m 0.079s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.063s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 760.477MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.171s, Elapsed time = 0h 0m 0.166s, Peak memory usage = 760.477MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.296s, Elapsed time = 0h 0m 0.303s, Peak memory usage = 760.477MB<br/></td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 6s, Elapsed time = 0h 0m 6s, Peak memory usage = 768.109MB</td>
+<td>CPU time = 0h 0m 4s, Elapsed time = 0h 0m 5s, Peak memory usage = 760.477MB</td>
 </tr>
 </table>
 <h1><a name="resource">Resource</a></h1>
@@ -169,7 +169,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label"><b>Register </b></td>
-<td>2434</td>
+<td>2436</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFF</td>
@@ -197,11 +197,11 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFC</td>
-<td>1238</td>
+<td>1241</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFCE</td>
-<td>958</td>
+<td>957</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFNP</td>
@@ -217,19 +217,19 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label"><b>LUT </b></td>
-<td>2991</td>
+<td>2996</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT2</td>
-<td>694</td>
+<td>689</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT3</td>
-<td>812</td>
+<td>821</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT4</td>
-<td>1485</td>
+<td>1486</td>
 </tr>
 <tr>
 <td class="label"><b>ALU </b></td>
@@ -341,12 +341,12 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>4088(3036 LUTs, 332 ALUs, 120 SSRAMs) / 54720</td>
+<td>4093(3041 LUTs, 332 ALUs, 120 SSRAMs) / 54720</td>
 <td>7%</td>
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>2434 / 41997</td>
+<td>2436 / 41997</td>
 <td>6%</td>
 </tr>
 <tr>
@@ -356,7 +356,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp--Register as FF</td>
-<td>2433 / 41997</td>
+<td>2435 / 41997</td>
 <td>6%</td>
 </tr>
 <tr>
@@ -444,6 +444,17 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td> </td>
 <td> </td>
 <td>u1_ov5640_dri/u_i2c_dr/dri_clk_s1/Q </td>
+</tr>
+<tr>
+<td>cmos1_frame_vsync</td>
+<td>Base</td>
+<td>10.000</td>
+<td>100.0</td>
+<td>0.000</td>
+<td>5.000</td>
+<td> </td>
+<td> </td>
+<td>u1_ov5640_dri/u_cmos_capture_data/cmos1_frame_vsync_s/F </td>
 </tr>
 <tr>
 <td>u_cmos_rpll/rpll_inst/CLKOUT.default_gen_clk</td>
@@ -646,7 +657,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>5</td>
 <td>dri_clk_2</td>
 <td>100.0(MHz)</td>
-<td>236.9(MHz)</td>
+<td>227.9(MHz)</td>
 <td>6</td>
 <td>TOP</td>
 </tr>
@@ -654,20 +665,28 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>6</td>
 <td>dri_clk_2</td>
 <td>100.0(MHz)</td>
-<td>236.9(MHz)</td>
+<td>227.9(MHz)</td>
 <td>6</td>
 <td>TOP</td>
 </tr>
 <tr>
 <td>7</td>
-<td>u_cmos_rpll/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>cmos1_frame_vsync</td>
 <td>100.0(MHz)</td>
-<td>356.6(MHz)</td>
-<td>4</td>
+<td>771.6(MHz)</td>
+<td>2</td>
 <td>TOP</td>
 </tr>
 <tr>
 <td>8</td>
+<td>u_cmos_rpll/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>100.0(MHz)</td>
+<td>365.0(MHz)</td>
+<td>4</td>
+<td>TOP</td>
+</tr>
+<tr>
+<td>9</td>
 <td>pll_ddr3/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>200.0(MHz)</td>
 <td>1364.3(MHz)</td>
@@ -675,7 +694,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>TOP</td>
 </tr>
 <tr>
-<td>9</td>
+<td>10</td>
 <td>u_Gowin_CLKDIV/clkdiv_inst/CLKOUT.default_gen_clk</td>
 <td>50.0(MHz)</td>
 <td>120.1(MHz)</td>
@@ -683,7 +702,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>TOP</td>
 </tr>
 <tr>
-<td>10</td>
+<td>11</td>
 <td>DDR3_MIG/gw3_top/i4/fclkdiv/CLKOUT.default_gen_clk</td>
 <td>50.0(MHz)</td>
 <td>132.3(MHz)</td>
