--- a/impl/pnr/dual_5640.power.html
+++ b/impl/pnr/dual_5640.power.html
@@ -59,11 +59,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\dual_5640.vg</td>
+<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\impl\gwsynthesis\dual_5640.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\dual_5640.cst</td>
+<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\dual_5640.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Thu Oct 21 22:13:57 2021
+<td>Mon Oct 25 15:38:57 2021
 </td>
 </tr>
 <tr>
@@ -96,7 +96,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>1008.892</td>
+<td>1020.392</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -104,14 +104,14 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>840.947</td>
+<td>852.446</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>80.388</td>
+<td>81.020</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -119,7 +119,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>29.612</td>
+<td>28.980</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -188,9 +188,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.000</td>
-<td>789.998</td>
+<td>801.498</td>
 <td>104.150</td>
-<td>894.148</td>
+<td>905.648</td>
 </tr>
 <tr>
 <td>VCCX</td>
@@ -232,9 +232,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>4.017</td>
+<td>4.038</td>
 <td>NA</td>
-<td>7.178</td>
+<td>7.224</td>
 </tr>
 <tr>
 <td>IO</td>
@@ -276,8 +276,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>dual_ov5640_lcd</td>
-<td>614.932</td>
-<td>614.932(614.930)</td>
+<td>614.952</td>
+<td>614.952(614.951)</td>
 <tr>
 <td>dual_ov5640_lcd/DDR3_MIG/</td>
 <td>157.229</td>
@@ -436,12 +436,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.147(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/gw_gao_inst_0/</td>
-<td>301.985</td>
-<td>301.985(301.985)</td>
+<td>301.984</td>
+<td>301.984(301.984)</td>
 <tr>
 <td>dual_ov5640_lcd/gw_gao_inst_0/u_ao_top/</td>
-<td>301.979</td>
-<td>301.979(301.742)</td>
+<td>301.978</td>
+<td>301.978(301.742)</td>
 <tr>
 <td>dual_ov5640_lcd/gw_gao_inst_0/u_ao_top/u_ao_mem_ctrl/</td>
 <td>301.742</td>
@@ -456,12 +456,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>20.920(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/syn_gen_inst/</td>
-<td>0.042</td>
-<td>0.042(0.000)</td>
+<td>0.043</td>
+<td>0.043(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u0_ov5640_dri/</td>
-<td>1.786</td>
-<td>1.786(1.786)</td>
+<td>1.792</td>
+<td>1.792(1.792)</td>
 <tr>
 <td>dual_ov5640_lcd/u0_ov5640_dri/u_cmos_capture_data/</td>
 <td>0.045</td>
@@ -472,28 +472,28 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.617(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u0_ov5640_dri/u_i2c_dr/</td>
-<td>0.124</td>
-<td>0.124(0.000)</td>
+<td>0.130</td>
+<td>0.130(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u1_ov5640_dri/</td>
-<td>1.791</td>
-<td>1.791(1.791)</td>
+<td>1.802</td>
+<td>1.802(1.802)</td>
 <tr>
 <td>dual_ov5640_lcd/u1_ov5640_dri/u_cmos_capture_data/</td>
-<td>0.045</td>
-<td>0.045(0.000)</td>
+<td>0.060</td>
+<td>0.060(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u1_ov5640_dri/u_i2c_cfg/</td>
 <td>1.617</td>
 <td>1.617(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u1_ov5640_dri/u_i2c_dr/</td>
-<td>0.130</td>
-<td>0.130(0.000)</td>
+<td>0.126</td>
+<td>0.126(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u_cmos_add/</td>
-<td>15.258</td>
-<td>15.258(15.240)</td>
+<td>15.261</td>
+<td>15.261(15.240)</td>
 <tr>
 <td>dual_ov5640_lcd/u_cmos_add/u_fifo_pong/</td>
 <td>15.240</td>
@@ -519,24 +519,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>u0_ov5640_dri/dri_clk_2</td>
-<td>100.000</td>
-<td>22.334</td>
-</tr>
-<tr>
-<td>u_cmos_rpll/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>100.000</td>
-<td>17.581</td>
+<td>NO CLOCK DOMAIN</td>
+<td>0.000</td>
+<td>44.100</td>
 </tr>
 <tr>
 <td>cam0_pclk</td>
 <td>100.000</td>
-<td>55.265</td>
+<td>55.264</td>
 </tr>
 <tr>
-<td>NO CLOCK DOMAIN</td>
-<td>0.000</td>
-<td>44.100</td>
+<td>gw_gao_inst_0/u_gw_jtag/tck_pad_i</td>
+<td>50.000</td>
+<td>169.217</td>
 </tr>
 <tr>
 <td>DDR3_MIG/gw3_top/i4/fclkdiv/CLKOUT.default_gen_clk</td>
@@ -544,9 +539,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>297.553</td>
 </tr>
 <tr>
-<td>gw_gao_inst_0/u_gw_jtag/tck_pad_i</td>
-<td>50.000</td>
-<td>169.217</td>
+<td>u0_ov5640_dri/dri_clk_2</td>
+<td>100.000</td>
+<td>22.340</td>
+</tr>
+<tr>
+<td>u_cmos_rpll/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>100.000</td>
+<td>17.581</td>
+</tr>
+<tr>
+<td>cam1_pclk</td>
+<td>100.000</td>
+<td>39.799</td>
 </tr>
 <tr>
 <td>sys_clk</td>
@@ -559,19 +564,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>11.480</td>
 </tr>
 <tr>
+<td>u1_ov5640_dri/dri_clk_2</td>
+<td>100.000</td>
+<td>22.335</td>
+</tr>
+<tr>
 <td>u_Gowin_CLKDIV/clkdiv_inst/CLKOUT.default_gen_clk</td>
 <td>50.000</td>
 <td>31.054</td>
 </tr>
 <tr>
-<td>cam1_pclk</td>
+<td>cmos1_frame_vsync</td>
 <td>100.000</td>
-<td>39.791</td>
-</tr>
-<tr>
-<td>u1_ov5640_dri/dri_clk_2</td>
-<td>100.000</td>
-<td>22.339</td>
+<td>11.490</td>
 </tr>
 <tr>
 <td>pll_ddr3/rpll_inst/CLKOUT.default_gen_clk</td>
