--- a/impl/pnr/dual_5640.power.html
+++ b/impl/pnr/dual_5640.power.html
@@ -59,11 +59,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\impl\gwsynthesis\dual_5640.vg</td>
+<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\dual_5640.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\dual_5640.cst</td>
+<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\dual_5640.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Oct 25 15:38:57 2021
+<td>Wed Oct 27 18:56:55 2021
 </td>
 </tr>
 <tr>
@@ -96,7 +96,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>1020.392</td>
+<td>750.005</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -104,14 +104,14 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>852.446</td>
+<td>582.059</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>81.020</td>
+<td>66.175</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -119,7 +119,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>28.980</td>
+<td>43.825</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -188,16 +188,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.000</td>
-<td>801.498</td>
+<td>529.510</td>
 <td>104.150</td>
-<td>905.648</td>
+<td>633.660</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>8.655</td>
+<td>8.931</td>
 <td>23.366</td>
-<td>80.051</td>
+<td>80.741</td>
 </tr>
 <tr>
 <td>VCCO15</td>
@@ -216,9 +216,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCCO33</td>
 <td>3.300</td>
-<td>2.395</td>
+<td>2.671</td>
 <td>0.647</td>
-<td>10.039</td>
+<td>10.950</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -232,19 +232,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>4.038</td>
+<td>3.939</td>
 <td>NA</td>
-<td>7.224</td>
+<td>7.372</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>74.854
+<td>76.734
 <td>14.852
-<td>26.918
+<td>27.785
 </tr>
 <tr>
 <td>BSRAM</td>
-<td>463.203
+<td>181.593
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -276,8 +276,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>dual_ov5640_lcd</td>
-<td>614.952</td>
-<td>614.952(614.951)</td>
+<td>333.243</td>
+<td>333.243(333.241)</td>
 <tr>
 <td>dual_ov5640_lcd/DDR3_MIG/</td>
 <td>157.229</td>
@@ -436,16 +436,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.147(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/gw_gao_inst_0/</td>
-<td>301.984</td>
-<td>301.984(301.984)</td>
+<td>20.241</td>
+<td>20.241(20.241)</td>
 <tr>
 <td>dual_ov5640_lcd/gw_gao_inst_0/u_ao_top/</td>
-<td>301.978</td>
-<td>301.978(301.742)</td>
+<td>20.236</td>
+<td>20.236(20.149)</td>
 <tr>
 <td>dual_ov5640_lcd/gw_gao_inst_0/u_ao_top/u_ao_mem_ctrl/</td>
-<td>301.742</td>
-<td>301.742(0.000)</td>
+<td>20.149</td>
+<td>20.149(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/gw_gao_inst_0/u_icon_top/</td>
 <td>0.006</td>
@@ -460,8 +460,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.043(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u0_ov5640_dri/</td>
-<td>1.792</td>
-<td>1.792(1.792)</td>
+<td>1.793</td>
+<td>1.793(1.793)</td>
 <tr>
 <td>dual_ov5640_lcd/u0_ov5640_dri/u_cmos_capture_data/</td>
 <td>0.045</td>
@@ -472,28 +472,28 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.617(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u0_ov5640_dri/u_i2c_dr/</td>
-<td>0.130</td>
-<td>0.130(0.000)</td>
+<td>0.131</td>
+<td>0.131(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u1_ov5640_dri/</td>
-<td>1.802</td>
-<td>1.802(1.802)</td>
+<td>1.782</td>
+<td>1.782(1.782)</td>
 <tr>
 <td>dual_ov5640_lcd/u1_ov5640_dri/u_cmos_capture_data/</td>
-<td>0.060</td>
-<td>0.060(0.000)</td>
+<td>0.028</td>
+<td>0.028(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u1_ov5640_dri/u_i2c_cfg/</td>
 <td>1.617</td>
 <td>1.617(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u1_ov5640_dri/u_i2c_dr/</td>
-<td>0.126</td>
-<td>0.126(0.000)</td>
+<td>0.138</td>
+<td>0.138(0.000)</td>
 <tr>
 <td>dual_ov5640_lcd/u_cmos_add/</td>
-<td>15.261</td>
-<td>15.261(15.240)</td>
+<td>15.314</td>
+<td>15.314(15.240)</td>
 <tr>
 <td>dual_ov5640_lcd/u_cmos_add/u_fifo_pong/</td>
 <td>15.240</td>
@@ -519,6 +519,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
+<td>u0_ov5640_dri/dri_clk_2</td>
+<td>100.000</td>
+<td>22.340</td>
+</tr>
+<tr>
 <td>NO CLOCK DOMAIN</td>
 <td>0.000</td>
 <td>44.100</td>
@@ -526,22 +531,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>cam0_pclk</td>
 <td>100.000</td>
-<td>55.264</td>
-</tr>
-<tr>
-<td>gw_gao_inst_0/u_gw_jtag/tck_pad_i</td>
-<td>50.000</td>
-<td>169.217</td>
-</tr>
-<tr>
-<td>DDR3_MIG/gw3_top/i4/fclkdiv/CLKOUT.default_gen_clk</td>
-<td>50.000</td>
-<td>297.553</td>
-</tr>
-<tr>
-<td>u0_ov5640_dri/dri_clk_2</td>
-<td>100.000</td>
-<td>22.340</td>
+<td>73.018</td>
 </tr>
 <tr>
 <td>u_cmos_rpll/rpll_inst/CLKOUT.default_gen_clk</td>
@@ -549,9 +539,39 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>17.581</td>
 </tr>
 <tr>
+<td>DDR3_MIG/gw3_top/i4/fclkdiv/CLKOUT.default_gen_clk</td>
+<td>50.000</td>
+<td>145.757</td>
+</tr>
+<tr>
+<td>u_cmos_add_3_1</td>
+<td>100.000</td>
+<td>32.003</td>
+</tr>
+<tr>
+<td>gw_gao_inst_0/u_gw_jtag/tck_pad_i</td>
+<td>50.000</td>
+<td>19.267</td>
+</tr>
+<tr>
+<td>u1_ov5640_dri/dri_clk_2</td>
+<td>100.000</td>
+<td>22.346</td>
+</tr>
+<tr>
 <td>cam1_pclk</td>
 <td>100.000</td>
-<td>39.799</td>
+<td>19.515</td>
+</tr>
+<tr>
+<td>cam0_vsync</td>
+<td>100.000</td>
+<td>11.484</td>
+</tr>
+<tr>
+<td>u_Gowin_CLKDIV/clkdiv_inst/CLKOUT.default_gen_clk</td>
+<td>50.000</td>
+<td>31.054</td>
 </tr>
 <tr>
 <td>sys_clk</td>
@@ -562,21 +582,6 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>DDR3_MIG/gw3_top/ddr_rst</td>
 <td>100.000</td>
 <td>11.480</td>
-</tr>
-<tr>
-<td>u1_ov5640_dri/dri_clk_2</td>
-<td>100.000</td>
-<td>22.335</td>
-</tr>
-<tr>
-<td>u_Gowin_CLKDIV/clkdiv_inst/CLKOUT.default_gen_clk</td>
-<td>50.000</td>
-<td>31.054</td>
-</tr>
-<tr>
-<td>cmos1_frame_vsync</td>
-<td>100.000</td>
-<td>11.490</td>
 </tr>
 <tr>
 <td>pll_ddr3/rpll_inst/CLKOUT.default_gen_clk</td>
