--- a/impl/pnr/dual_5640.rpt.html
+++ b/impl/pnr/dual_5640.rpt.html
@@ -55,11 +55,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\impl\gwsynthesis\dual_5640.vg</td>
+<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\dual_5640.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\DUAL-OV5640-for-GOWIN\src\dual_5640.cst</td>
+<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\dual_5640.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Oct 25 15:38:57 2021
+<td>Wed Oct 27 18:56:55 2021
 </td>
 </tr>
 <tr>
@@ -94,22 +94,22 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td class="label">Place & Route Process</td>
 <td>Running placement:
    Placement Phase 0: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
-   Placement Phase 1: CPU time = 0h 0m 0.601s, Elapsed time = 0h 0m 0.601s
-   Placement Phase 2: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
+   Placement Phase 1: CPU time = 0h 0m 0.931s, Elapsed time = 0h 0m 0.931s
+   Placement Phase 2: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
    Placement Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
-   Total Placement: CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s
+   Total Placement: CPU time = 0h 0m 8s, Elapsed time = 0h 0m 8s
 Running routing:
-   Routing Phase 0: CPU time = 0h 0m 0.003s, Elapsed time = 0h 0m 0.002s
+   Routing Phase 0: CPU time = 0h 0m 0.002s, Elapsed time = 0h 0m 0.003s
    Routing Phase 1: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
-   Routing Phase 2: CPU time = 0h 0m 7s, Elapsed time = 0h 0m 7s
-   Total Routing: CPU time = 0h 0m 8s, Elapsed time = 0h 0m 8s
+   Routing Phase 2: CPU time = 0h 0m 11s, Elapsed time = 0h 0m 11s
+   Total Routing: CPU time = 0h 0m 12s, Elapsed time = 0h 0m 12s
 Generate output files:
-   CPU time = 0h 0m 6s, Elapsed time = 0h 0m 6s
+   CPU time = 0h 0m 9s, Elapsed time = 0h 0m 9s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 20s, Elapsed time = 0h 0m 20s, Peak memory usage = 761MB</td>
+<td>CPU time = 0h 0m 29s, Elapsed time = 0h 0m 29s, Peak memory usage = 827MB</td>
 </tr>
 </table>
 <br/>
@@ -124,12 +124,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>4048/54720</td>
+<td>3910/54720</td>
 <td>7%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>3328(2996 LUT, 332 ALU, 0 ROM16)</td>
+<td>3190(2858 LUT, 332 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -139,7 +139,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>2436/41997</td>
+<td>2194/41997</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -149,7 +149,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>2415/41040</td>
+<td>2173/41040</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -164,8 +164,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>3440/27360</td>
-<td>12%</td>
+<td>2949/27360</td>
+<td>10%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
@@ -199,8 +199,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">BSRAM</td>
-<td>47 SDPB<br/>15 SDPX9B<br/>2 pROM<br/></td>
-<td>45%</td>
+<td>4 SDPB<br/>15 SDPX9B<br/>2 pROM<br/></td>
+<td>15%</td>
 </tr>
 <tr>
 <td class="label">DSP</td>
@@ -329,17 +329,27 @@ Generate output files:
 <tr>
 <td class="label">sys_clk_d</td>
 <td>PRIMARY</td>
-<td> TR BR BL</td>
+<td> TR TL BR BL</td>
+</tr>
+<tr>
+<td class="label">cam0_pclk_d</td>
+<td>PRIMARY</td>
+<td> TR BR</td>
+</tr>
+<tr>
+<td class="label">cam1_pclk_d</td>
+<td>PRIMARY</td>
+<td> TR BR</td>
 </tr>
 <tr>
 <td class="label">clk_100m</td>
 <td>PRIMARY</td>
-<td> BR</td>
+<td> TR</td>
 </tr>
 <tr>
-<td class="label">cmos1_frame_vsync</td>
+<td class="label">u_cmos_add_3_1</td>
 <td>PRIMARY</td>
-<td> TR</td>
+<td> TR BR</td>
 </tr>
 <tr>
 <td class="label">dma_clk</td>
@@ -349,30 +359,15 @@ Generate output files:
 <tr>
 <td class="label">pix_clk</td>
 <td>PRIMARY</td>
-<td> TR TL</td>
+<td> TR TL BR</td>
 </tr>
 <tr>
 <td class="label">dri_clk_2</td>
 <td>PRIMARY</td>
-<td> BR</td>
+<td> TR</td>
 </tr>
 <tr>
-<td class="label">dri_clk_2</td>
-<td>PRIMARY</td>
-<td> TR BR</td>
-</tr>
-<tr>
-<td class="label">control0[0]</td>
-<td>PRIMARY</td>
-<td> TR TL BR BL</td>
-</tr>
-<tr>
-<td class="label">cam0_pclk_d</td>
-<td>SECONDARY</td>
-<td> -</td>
-</tr>
-<tr>
-<td class="label">cam1_pclk_d</td>
+<td class="label">cam0_vsync_d</td>
 <td>SECONDARY</td>
 <td> -</td>
 </tr>
@@ -392,12 +387,17 @@ Generate output files:
 <td> -</td>
 </tr>
 <tr>
-<td class="label">n838_6</td>
+<td class="label">dri_clk_2</td>
 <td>SECONDARY</td>
 <td> -</td>
 </tr>
 <tr>
 <td class="label">gao_jtag_reset</td>
+<td>SECONDARY</td>
+<td> -</td>
+</tr>
+<tr>
+<td class="label">control0[0]</td>
 <td>SECONDARY</td>
 <td> -</td>
 </tr>
