:racehorse: 解决上下分屏显示

--- a/impl/gwsynthesis/dual_5640_syn.rpt.html
+++ b/impl/gwsynthesis/dual_5640_syn.rpt.html
@@ -55,32 +55,32 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\cmos_add.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\cmos_rpll\cmos_rpll.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ddr3_memory_interface\ddr3_memory_interface.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ddr_rpll\ddr_rpll.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\dual_ov5640_lcd.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\dvi_tx\dvi_tx.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\fifo_ping\fifo_ping.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\fifo_pong\fifo_pong.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\gowin_clkdiv\gowin_clkdiv.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\hdmi_rpll\hdmi_rpll.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\OV5640_capture_data.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\i2c_dri.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\i2c_ov5640_rgb565_cfg.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\ov5640_dri.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\ov5640\picture_size.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\syn_code\syn_gen.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\testpattern.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\video_frame_buffer\video_frame_buffer.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\video_frame_buffer_32\video_frame_buffer_32.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\video_frame_buffer_dual\video_frame_buffer_dual.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\video_rpll\video_rpll.v<br>
-D:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_AO_0\gw_ao_mem_ctrl.v<br>
-D:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_AO_0\gw_ao_top.v<br>
-D:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_CON\gw_con_top.v<br>
-D:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\gw_jtag.v<br>
-C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_top.v<br>
+<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\cmos_add.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\cmos_rpll\cmos_rpll.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\ddr3_memory_interface\ddr3_memory_interface.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\ddr_rpll\ddr_rpll.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\dual_ov5640_lcd.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\dvi_tx\dvi_tx.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\fifo_ping\fifo_ping.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\fifo_pong\fifo_pong.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\gowin_clkdiv\gowin_clkdiv.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\hdmi_rpll\hdmi_rpll.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\ov5640\OV5640_capture_data.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\ov5640\i2c_dri.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\ov5640\i2c_ov5640_rgb565_cfg.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\ov5640\ov5640_dri.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\ov5640\picture_size.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\syn_code\syn_gen.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\testpattern.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\video_frame_buffer\video_frame_buffer.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\video_frame_buffer_32\video_frame_buffer_32.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\video_frame_buffer_dual\video_frame_buffer_dual.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\video_rpll\video_rpll.v<br>
+C:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_AO_0\gw_ao_mem_ctrl.v<br>
+C:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_AO_0\gw_ao_top.v<br>
+C:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\GAO_LITE\GW_CON\gw_con_top.v<br>
+C:\Gowin\Gowin_V1.9.8\IDE\data\ipcores\gw_jtag.v<br>
+C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\impl\gwsynthesis\RTL_GAO\gw_gao_top.v<br>
 </td>
 </tr>
 <tr>
@@ -101,7 +101,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Oct 27 18:56:23 2021
+<td>Sun Oct 31 20:34:54 2021
 </td>
 </tr>
 <tr>
@@ -117,11 +117,11 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">Synthesis Process</td>
-<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 827.648MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.609s, Elapsed time = 0h 0m 0.573s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.484s, Elapsed time = 0h 0m 0.487s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.703s, Elapsed time = 0h 0m 0.697s, Peak memory usage = 827.648MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0.109s, Elapsed time = 0h 0m 0.109s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.009s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.039s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.012s, Peak memory usage = 827.648MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.203s, Elapsed time = 0h 0m 0.207s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.14s, Elapsed time = 0h 0m 0.134s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0.078s, Elapsed time = 0h 0m 0.089s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 827.648MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.25s, Elapsed time = 0h 0m 0.268s, Peak memory usage = 827.648MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.437s, Elapsed time = 0h 0m 0.457s, Peak memory usage = 827.648MB<br/></td>
+<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 1s, Elapsed time = 0h 0m 2s, Peak memory usage = 752.891MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.281s, Elapsed time = 0h 0m 0.28s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.25s, Elapsed time = 0h 0m 0.254s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.546s, Elapsed time = 0h 0m 0.515s, Peak memory usage = 752.891MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0.218s, Elapsed time = 0h 0m 0.231s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.006s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.023s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.007s, Peak memory usage = 752.891MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.156s, Elapsed time = 0h 0m 0.149s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.109s, Elapsed time = 0h 0m 0.099s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.072s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 752.891MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.171s, Elapsed time = 0h 0m 0.191s, Peak memory usage = 752.891MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.421s, Elapsed time = 0h 0m 0.428s, Peak memory usage = 752.891MB<br/></td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 6s, Elapsed time = 0h 0m 6s, Peak memory usage = 827.648MB</td>
+<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 6s, Peak memory usage = 752.891MB</td>
 </tr>
 </table>
 <h1><a name="resource">Resource</a></h1>
@@ -169,7 +169,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label"><b>Register </b></td>
-<td>2194</td>
+<td>2505</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFF</td>
@@ -197,11 +197,11 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFC</td>
-<td>1262</td>
+<td>1245</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFCE</td>
-<td>694</td>
+<td>1022</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFNP</td>
@@ -217,19 +217,19 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label"><b>LUT </b></td>
-<td>2858</td>
+<td>3650</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT2</td>
-<td>708</td>
+<td>694</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT3</td>
-<td>745</td>
+<td>1370</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT4</td>
-<td>1405</td>
+<td>1586</td>
 </tr>
 <tr>
 <td class="label"><b>ALU </b></td>
@@ -241,7 +241,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label"><b>SSRAM </b></td>
-<td>120</td>
+<td>376</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspRAM16S4</td>
@@ -249,15 +249,15 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspRAM16SDP4</td>
-<td>71</td>
+<td>327</td>
 </tr>
 <tr>
 <td class="label"><b>INV </b></td>
-<td>42</td>
+<td>45</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspINV</td>
-<td>42</td>
+<td>45</td>
 </tr>
 <tr>
 <td class="label"><b>IOLOGIC </b></td>
@@ -285,11 +285,11 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label"><b>BSRAM </b></td>
-<td>21</td>
+<td>99</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspSDPB</td>
-<td>4</td>
+<td>82</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspSDPX9B</td>
@@ -341,13 +341,13 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>3952(2900 LUTs, 332 ALUs, 120 SSRAMs) / 54720</td>
-<td>7%</td>
+<td>6283(3695 LUTs, 332 ALUs, 376 SSRAMs) / 54720</td>
+<td>11%</td>
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>2194 / 41997</td>
-<td>5%</td>
+<td>2505 / 41997</td>
+<td>6%</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp--Register as Latch</td>
@@ -356,13 +356,13 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp--Register as FF</td>
-<td>2193 / 41997</td>
-<td>5%</td>
+<td>2504 / 41997</td>
+<td>6%</td>
 </tr>
 <tr>
 <td class="label">BSRAM</td>
-<td>21 / 140</td>
-<td>15%</td>
+<td>99 / 140</td>
+<td>71%</td>
 </tr>
 </table>
 <h1><a name="timing">Timing</a></h1>
@@ -457,7 +457,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>u1_ov5640_dri/u_i2c_dr/dri_clk_s1/Q </td>
 </tr>
 <tr>
-<td>u_cmos_add_3_1</td>
+<td>u_cmos_add_52_4</td>
 <td>Base</td>
 <td>10.000</td>
 <td>100.0</td>
@@ -465,7 +465,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>5.000</td>
 <td> </td>
 <td> </td>
-<td>u_cmos_add/counter_clk_s0/Q </td>
+<td>u_cmos_add/u_cmos_add_52_s0/F </td>
 </tr>
 <tr>
 <td>u_cmos_rpll/rpll_inst/CLKOUT.default_gen_clk</td>
@@ -644,8 +644,8 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>2</td>
 <td>cam0_pclk</td>
 <td>100.0(MHz)</td>
-<td>150.8(MHz)</td>
-<td>10</td>
+<td>166.0(MHz)</td>
+<td>9</td>
 <td>TOP</td>
 </tr>
 <tr>
@@ -676,7 +676,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>6</td>
 <td>dri_clk_2</td>
 <td>100.0(MHz)</td>
-<td>229.3(MHz)</td>
+<td>229.9(MHz)</td>
 <td>6</td>
 <td>TOP</td>
 </tr>
@@ -684,15 +684,15 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>7</td>
 <td>dri_clk_2</td>
 <td>100.0(MHz)</td>
-<td>229.3(MHz)</td>
+<td>229.9(MHz)</td>
 <td>6</td>
 <td>TOP</td>
 </tr>
 <tr>
 <td>8</td>
-<td>u_cmos_add_3_1</td>
+<td>u_cmos_add_52_4</td>
 <td>100.0(MHz)</td>
-<td>286.7(MHz)</td>
+<td>288.4(MHz)</td>
 <td>5</td>
 <td>TOP</td>
 </tr>
@@ -700,7 +700,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>9</td>
 <td>u_cmos_rpll/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>100.0(MHz)</td>
-<td>365.0(MHz)</td>
+<td>356.6(MHz)</td>
 <td>4</td>
 <td>TOP</td>
 </tr>
@@ -793,7 +793,7 @@ C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\RTL_GAO\gw_gao_
 <td>0.683</td>
 <td>tINS</td>
 <td>RR</td>
-<td>46</td>
+<td>153</td>
 <td>sys_clk_ibuf/O</td>
 </tr>
 <tr>
