--- a/impl/pnr/dual_5640.rpt.html
+++ b/impl/pnr/dual_5640.rpt.html
@@ -55,11 +55,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\impl\gwsynthesis\dual_5640.vg</td>
+<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\impl\gwsynthesis\dual_5640.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>C:\Users\hankg\OneDrive\Works\Gowin\dual_ov5640\src\dual_5640.cst</td>
+<td>C:\Users\Baymax\Desktop\GoWin\dual_ov5640_for_GOWIN\1028\DUAL-OV5640-for-GOWIN\src\dual_5640.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Oct 27 18:56:55 2021
+<td>Sun Oct 31 20:35:27 2021
 </td>
 </tr>
 <tr>
@@ -94,22 +94,22 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td class="label">Place & Route Process</td>
 <td>Running placement:
    Placement Phase 0: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
-   Placement Phase 1: CPU time = 0h 0m 0.931s, Elapsed time = 0h 0m 0.931s
-   Placement Phase 2: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
+   Placement Phase 1: CPU time = 0h 0m 0.616s, Elapsed time = 0h 0m 0.615s
+   Placement Phase 2: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
    Placement Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
-   Total Placement: CPU time = 0h 0m 8s, Elapsed time = 0h 0m 8s
+   Total Placement: CPU time = 0h 0m 6s, Elapsed time = 0h 0m 6s
 Running routing:
-   Routing Phase 0: CPU time = 0h 0m 0.002s, Elapsed time = 0h 0m 0.003s
+   Routing Phase 0: CPU time = 0h 0m 0.003s, Elapsed time = 0h 0m 0.002s
    Routing Phase 1: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
-   Routing Phase 2: CPU time = 0h 0m 11s, Elapsed time = 0h 0m 11s
-   Total Routing: CPU time = 0h 0m 12s, Elapsed time = 0h 0m 12s
+   Routing Phase 2: CPU time = 0h 0m 16s, Elapsed time = 0h 0m 16s
+   Total Routing: CPU time = 0h 0m 17s, Elapsed time = 0h 0m 17s
 Generate output files:
-   CPU time = 0h 0m 9s, Elapsed time = 0h 0m 9s
+   CPU time = 0h 0m 7s, Elapsed time = 0h 0m 7s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 29s, Elapsed time = 0h 0m 29s, Peak memory usage = 827MB</td>
+<td>CPU time = 0h 0m 30s, Elapsed time = 0h 0m 30s, Peak memory usage = 788MB</td>
 </tr>
 </table>
 <br/>
@@ -124,22 +124,22 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>3910/54720</td>
-<td>7%</td>
+<td>6238/54720</td>
+<td>11%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>3190(2858 LUT, 332 ALU, 0 ROM16)</td>
+<td>3982(3650 LUT, 332 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --SSRAM(RAM16)</td>
-<td>120</td>
+<td>376</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>2194/41997</td>
+<td>2505/41997</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -149,8 +149,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>2173/41040</td>
-<td>5%</td>
+<td>2484/41040</td>
+<td>6%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as Latch</td>
@@ -164,8 +164,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>2949/27360</td>
-<td>10%</td>
+<td>4833/27360</td>
+<td>17%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
@@ -199,8 +199,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">BSRAM</td>
-<td>4 SDPB<br/>15 SDPX9B<br/>2 pROM<br/></td>
-<td>15%</td>
+<td>82 SDPB<br/>15 SDPX9B<br/>2 pROM<br/></td>
+<td>70%</td>
 </tr>
 <tr>
 <td class="label">DSP</td>
@@ -295,7 +295,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">PRIMARY</td>
-<td>8/8(100%)</td>
+<td>7/8(87%)</td>
 </tr>
 <tr>
 <td class="label">SECONDARY</td>
@@ -332,24 +332,14 @@ Generate output files:
 <td> TR TL BR BL</td>
 </tr>
 <tr>
-<td class="label">cam0_pclk_d</td>
-<td>PRIMARY</td>
-<td> TR BR</td>
-</tr>
-<tr>
-<td class="label">cam1_pclk_d</td>
-<td>PRIMARY</td>
-<td> TR BR</td>
-</tr>
-<tr>
 <td class="label">clk_100m</td>
 <td>PRIMARY</td>
 <td> TR</td>
 </tr>
 <tr>
-<td class="label">u_cmos_add_3_1</td>
+<td class="label">u_cmos_add_52_4</td>
 <td>PRIMARY</td>
-<td> TR BR</td>
+<td> TR BR BL</td>
 </tr>
 <tr>
 <td class="label">dma_clk</td>
@@ -359,7 +349,7 @@ Generate output files:
 <tr>
 <td class="label">pix_clk</td>
 <td>PRIMARY</td>
-<td> TR TL BR</td>
+<td> TR TL BL</td>
 </tr>
 <tr>
 <td class="label">dri_clk_2</td>
@@ -367,7 +357,22 @@ Generate output files:
 <td> TR</td>
 </tr>
 <tr>
+<td class="label">control0[0]</td>
+<td>PRIMARY</td>
+<td> TR TL BR BL</td>
+</tr>
+<tr>
+<td class="label">cam0_pclk_d</td>
+<td>SECONDARY</td>
+<td> -</td>
+</tr>
+<tr>
 <td class="label">cam0_vsync_d</td>
+<td>SECONDARY</td>
+<td> -</td>
+</tr>
+<tr>
+<td class="label">cam1_pclk_d</td>
 <td>SECONDARY</td>
 <td> -</td>
 </tr>
@@ -388,16 +393,6 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">dri_clk_2</td>
-<td>SECONDARY</td>
-<td> -</td>
-</tr>
-<tr>
-<td class="label">gao_jtag_reset</td>
-<td>SECONDARY</td>
-<td> -</td>
-</tr>
-<tr>
-<td class="label">control0[0]</td>
 <td>SECONDARY</td>
 <td> -</td>
 </tr>
